test/files/neg/wellkinded_wrongarity.check
wellkinded_wrongarity.scala:5: error: Tuple2 takes two type parameters, expected: one
object mp extends Monad[Tuple2]
                        ^
one error found
